--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -5,6 +5,7 @@ footer {
   justify-content: stretch;
   padding: 2em;
   background-color: #2d3039;
+  transition: all ease-in 0.5s;
 }
 
 .footermenu {
