--- a/styles/header/_rubrik.scss
+++ b/styles/header/_rubrik.scss
@@ -3,25 +3,46 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(pictures/images/header/header-small.jpg);
+  background-image: url(../../pictures/images/header/header-small.jpg);
   flex-grow: 1;
   background-size: cover;
   background-repeat: no-repeat;
   height: calc(100vh - 60px);
   background-position: center;
   display: flex;
+  transition: all ease-in 500ms;
+  justify-content: start;
+  align-items: start;
 
   .bigtitle {
-    max-width: 500px;
+    max-width: 290px;
+    margin: auto;
     text-align: center;
+    padding-top: 3em;
+    transition: all ease-in 0.5s;
+
+    @media (min-width: $tabletSize) {
+      @include headerPadding(2em);
+    }
+
+    @media (min-width: $desktopSize) {
+      @include headerPadding(5.5em);
+      max-width: 600px;
+    }
   }
 
   @media (min-width: $tabletSize) {
-    background-image: url(pictures/images/header/header-large.jpg)
+    background-image: url(../../pictures/images/header/header-large.jpg);
+
   }
 
   h1 {
     color: #ff8673;
+
+    @media (min-width: $desktopSize) {
+      font-size: 52px;
+      margin-bottom: 0;
+    }
   }
 
   p {
