--- a/styles/maincontent/_articles.scss
+++ b/styles/maincontent/_articles.scss
@@ -4,15 +4,20 @@
   max-width: 1200px;
   align-items: center;
   text-align: center;
-  line-height: 1em;
+  line-height: normal;
+  transition: all ease-in 0.5s;
 
   h2 {
-    padding-bottom: 1em;
-    margin-bottom: 0;
+    padding-bottom: 0.2em;
+    padding: 1em;
+    margin: 0;
     font-size: 2.5em;
     color: #9d5c5f;
+    line-height: normal;
+    font-size: 1.7em;
+    transition: all ease-in 0.5s;
 
-    @media (min-width: $mobileSize) {
+    @media (min-width: $tabletSize) {
       padding: 2em;
     }
   }
@@ -23,14 +28,23 @@
     padding-bottom: 0;
 
     @media (min-width: $tabletSize) {
-      padding-bottom: 3em;
+      padding-bottom: 1em;
+    }
+
+    @media (min-width: $desktopSize) {
+      padding-bottom: 2.5em;
     }
   }
 
   .image {
     object-fit: contain;
     max-width: 450px;
-    flex-basis: 50%;
+    flex-basis: 48%;
+    margin-bottom: -10px;
+
+    @media (min-width: $mobileSize) {
+      margin-bottom: unset;
+    }
   }
 
   .fonts {
@@ -39,7 +53,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-basis: 50%;
+    flex-basis: 52%;
 
     p {
       max-width: 300px;
@@ -47,15 +61,21 @@
     }
 
     h3 {
-      margin-bottom: 0.2em;
+      margin: 0;
+      margin-bottom: -0.5em;
       color: #9d5c5f;
-      font-size: 1.5em;
+      font-size: 1.2em;
+
+      @media (min-width: $tabletSize) {
+        font-size: 1.7em;
+      }
     }
   }
 }
 
 .informationfirstpost {
   flex-direction: column-reverse;
+  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     flex-direction: row;
@@ -77,8 +97,13 @@
 
 .informationthirdpost {
   flex-direction: column-reverse;
+  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     flex-direction: row;
+  }
+
+  @media (min-width: $desktopSize) {
+    padding-bottom: 2em;
   }
 }
