--- a/styles/maincontent/_services.scss
+++ b/styles/maincontent/_services.scss
@@ -5,7 +5,12 @@
   flex-direction: column;
   align-items: center;
   color: #ff8673;
-  font-size: 2em;
+  font-size: 1.5em;
+  transition: all ease-in 0.5s;
+
+  @media (min-width: $mobileSize) {
+    font-size: 2em;
+  }
 
   @media (min-width: $desktopSize) {
     padding: 3em;
@@ -38,32 +43,33 @@
     "taskstext taskstext"
     "taskimg1 taskimg2"
     "taskimg4 taskimg4";
-  grid-gap: 0.5em;
-  padding: 1em;
+  grid-gap: 1em;
+  padding: 1.3em;
   min-height: 450px;
-  background: white;
-  max-width: 1200px;
+  max-width: 350px;
   margin: auto;
+  transition: all ease-in 0.5s;
 
 
   @media (min-width: $tabletSize) {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 2fr 1fr 1fr;
-    grid-gap: 1em;
-    min-height: 450px;
-    padding: 3em;
+    grid-gap: 1.5em;
+    padding: 4em;
     grid-template-areas:
       "taskstext taskimg1 taskimg2"
       "taskstext taskimg4 taskimg4";
+    max-width: 1200px;
   }
 
   @media (min-width: $desktopSize) {
     grid-template-columns: 3fr 1fr 1fr 1fr;
     padding: 6em;
-    gap: 2em;
+    gap: 1.5em;
     grid-template-areas:
       "taskstext taskimg1 taskimg2 taskimg3"
       "taskstext taskimg4 taskimg4 taskimg3";
+    max-width: 1200px;
   }
 }
 
@@ -113,5 +119,10 @@
 
   h3 {
     color: #9d5c5f;
+    font-size: 0.9em;
+
+    @media (min-width: $mobileSize) {
+      font-size: unset;
+    }
   }
 }
