--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+.end {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,33 +6,33 @@ footer {
   padding: 2em;
   background-color: #2d3039;
   transition: all ease-in 0.5s;
-}
 
-.footermenu {
-  a {
-    text-decoration: none;
-    color: #eaddd9;
-    padding: 0.5em;
-    font-weight: bold;
-    font-size: 11px;
 
-    @media (min-width: $mobileSize) {
-      font-size: 15px;
+  &__menu {
+    a {
+      text-decoration: none;
+      color: #eaddd9;
+      padding: 0.5em;
+      font-weight: bold;
+      font-size: 11px;
+
+      @media (min-width: $mobileSize) {
+        font-size: 15px;
+      }
+
+      @media (min-width: $tabletSize) {
+        padding: 1em;
+        font-size: 16px;
+      }
     }
-
-    @media (min-width: $tabletSize) {
-      padding: 1em;
-      font-size: 16px;
-    }
-  }
-}
-
-footer {
-  @media (min-width: $tabletSize) {
-    padding: 4em;
   }
 
   .logo {
     margin-bottom: 25px;
   }
+
+  @media (min-width: $tabletSize) {
+    padding: 4em;
+  }
+
 }
