--- a/styles/header/_rubrik.scss
+++ b/styles/header/_rubrik.scss
@@ -39,6 +39,11 @@
   h1 {
     color: #ff8673;
 
+    @media (min-width: $tabletSize) {
+      font-size: 36px;
+      margin-bottom: 0;
+    }
+
     @media (min-width: $desktopSize) {
       font-size: 52px;
       margin-bottom: 0;
