--- a/styles/maincontent/_services.scss
+++ b/styles/maincontent/_services.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.tasks {
+.services {
   display: grid;
   grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
   grid-template-columns: 1fr 1fr;
@@ -71,58 +71,58 @@
       "taskstext taskimg4 taskimg4 taskimg3";
     max-width: 1200px;
   }
-}
 
-.tasksimg1 {
-  width: 100%;
-  height: 100%;
-  grid-area: taskimg1;
-}
-
-.tasksimg2 {
-  width: 100%;
-  height: 100%;
-  grid-area: taskimg2;
-}
-
-.tasksimg3 {
-  display: none;
-
-  @media (min-width: $tabletSize) {
-    display: unset;
+  &__img1 {
     width: 100%;
     height: 100%;
-    grid-row: span 2;
-    grid-area: taskimg3;
-  }
-}
-
-.tasksimg4 {
-  width: 100%;
-  height: 100%;
-  grid-area: taskimg4;
-}
-
-.taskspara {
-  display: grid;
-  grid-area: taskstext;
-}
-
-.para {
-  max-width: 330px;
-  align-self: center;
-  justify-self: center;
-
-  p {
-    font-size: 12px;
+    grid-area: taskimg1;
   }
 
-  h3 {
-    color: #9d5c5f;
-    font-size: 0.9em;
+  &__img2 {
+    width: 100%;
+    height: 100%;
+    grid-area: taskimg2;
+  }
 
-    @media (min-width: $mobileSize) {
-      font-size: unset;
+  &__img3 {
+    display: none;
+
+    @media (min-width: $tabletSize) {
+      display: unset;
+      width: 100%;
+      height: 100%;
+      grid-row: span 2;
+      grid-area: taskimg3;
+    }
+  }
+
+  &__img4 {
+    width: 100%;
+    height: 100%;
+    grid-area: taskimg4;
+  }
+
+  &__text {
+    display: grid;
+    grid-area: taskstext;
+  }
+
+  .text {
+    max-width: 330px;
+    align-self: center;
+    justify-self: center;
+
+    p {
+      font-size: 12px;
+    }
+
+    h3 {
+      color: #9d5c5f;
+      font-size: 0.9em;
+
+      @media (min-width: $mobileSize) {
+        font-size: unset;
+      }
     }
   }
 }
