--- a/styles/header/_rubrik.scss
+++ b/styles/header/_rubrik.scss
@@ -53,5 +53,10 @@
   p {
     color: white;
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    font-size: 14px;
+
+    @media (min-width: $mobileSize) {
+      font-size: unset;
+    }
   }
 }
