--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,13 @@ body {
 
 img {
   max-width: 100%;
+  display: block;
+}
+
+@media (min-width: 450px) {
+  img {
+    margin-bottom: 0.5em;
+  }
 }
 
 main {
@@ -131,7 +138,7 @@ main .informationwrapper {
   transition: all ease-in 0.5s;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .navigator a {
     margin: 0.2em;
     font-size: 15px;
@@ -250,6 +257,13 @@ main .informationwrapper {
 .rubrik p {
   color: white;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+}
+
+@media (min-width: 375px) {
+  .rubrik p {
+    font-size: unset;
+  }
 }
 
 .informationwrapper {
@@ -318,10 +332,9 @@ main .informationwrapper {
   max-width: 450px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
-  margin-bottom: -10px;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 450px) {
   .informationwrapper .image {
     margin-bottom: unset;
   }
@@ -402,6 +415,12 @@ main .informationwrapper {
   }
 }
 
+@media (min-width: 450px) {
+  .informationthirdpost {
+    padding-bottom: 0.5em;
+  }
+}
+
 @media (min-width: 850px) {
   .informationthirdpost {
     padding-bottom: 2em;
@@ -425,9 +444,10 @@ main .informationwrapper {
   font-size: 1.5em;
   -webkit-transition: all ease-in 0.5s;
   transition: all ease-in 0.5s;
+  padding: 1.5em 0.5em;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .socialmedia {
     font-size: 2em;
   }
@@ -437,6 +457,10 @@ main .informationwrapper {
   .socialmedia {
     padding: 3em;
   }
+}
+
+.socialmedia h4 {
+  margin-top: 0;
 }
 
 .socialmediaboxes {
@@ -452,13 +476,14 @@ main .informationwrapper {
 }
 
 .socialmediaboxes img {
-  margin-inline: 0.2em;
+  margin: 0 0.2em;
   -o-object-fit: contain;
      object-fit: contain;
   min-width: 80px;
   width: 20vw;
   max-width: 170px;
   border: 3px solid white;
+  margin-bottom: 0.5em;
 }
 
 .services {
@@ -569,7 +594,7 @@ main .informationwrapper {
   font-size: 0.9em;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .services .text h3 {
     font-size: unset;
   }
@@ -589,7 +614,7 @@ main .informationwrapper {
   transition: all ease-in 0.5s;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .aboutus {
     min-height: 700px;
   }
@@ -675,7 +700,6 @@ main .informationwrapper {
       grid-template-rows: 1fr 1fr 1fr;
   max-height: 390px;
       grid-template-areas: "img1 img2" "text text" "img3 img4";
-  grid-gap: 0.5em;
   padding: 1em;
   margin: auto;
   max-width: 1200px;
@@ -683,9 +707,10 @@ main .informationwrapper {
   transition: all ease-in 0.5s;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .gallery {
     min-height: 500px;
+    grid-gap: 0.5em;
   }
 }
 
@@ -693,7 +718,7 @@ main .informationwrapper {
   .gallery {
     min-height: 600px;
     max-width: 600px;
-    padding-block: 3em;
+    padding: 3em 0;
   }
 }
 
@@ -748,8 +773,6 @@ main .informationwrapper {
   height: 100%;
   grid-area: img5;
   display: none;
-  -webkit-transition: all ease-in 0.5s;
-  transition: all ease-in 0.5s;
 }
 
 @media (min-width: 610px) {
@@ -763,8 +786,6 @@ main .informationwrapper {
   height: 100%;
   grid-area: img6;
   display: none;
-  -webkit-transition: all ease-in 0.5s;
-  transition: all ease-in 0.5s;
 }
 
 @media (min-width: 610px) {
@@ -778,8 +799,6 @@ main .informationwrapper {
   height: 100%;
   grid-area: img7;
   display: none;
-  -webkit-transition: all ease-in 0.5s;
-  transition: all ease-in 0.5s;
 }
 
 @media (min-width: 610px) {
@@ -793,8 +812,6 @@ main .informationwrapper {
   height: 100%;
   grid-area: img8;
   display: none;
-  -webkit-transition: all ease-in 0.5s;
-  transition: all ease-in 0.5s;
 }
 
 @media (min-width: 610px) {
@@ -816,35 +833,31 @@ main .informationwrapper {
   -ms-grid-column-span: 2;
   grid-area: text;
   z-index: 10;
-  max-width: 250px;
-  -webkit-transition: all ease-in 0.5s;
-  transition: all ease-in 0.5s;
+  max-width: 650px;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .gallerytext {
-    margin-block: -3em;
+    margin-top: -3em;
+    margin-bottom: -3em;
     padding: 3em;
-    max-width: 350px;
+    width: 80vw;
   }
 }
 
 @media (min-width: 610px) {
   .gallerytext {
-    margin-block: -5em;
+    margin: -5em 0;
     padding: 4.5em;
-    padding-block: 5em;
-    max-width: 400px;
+    padding-top: 5em;
+    padding-bottom: 5em;
   }
 }
 
 @media (min-width: 850px) {
   .gallerytext {
-    margin-inline: -5em;
-    padding-inline: 5em;
-    margin-block: -4em;
-    padding-block: 4em;
-    max-width: 650px;
+    margin: -4em -5em;
+    padding: 4em 5em;
   }
 }
 
@@ -903,7 +916,7 @@ main .informationwrapper {
   font-size: 11px;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 375px) {
   .end__menu a {
     font-size: 15px;
   }
