--- a/styles/maincontent/_gallery.scss
+++ b/styles/maincontent/_gallery.scss
@@ -7,7 +7,6 @@
     "img1 img2"
     "text text"
     "img3 img4";
-  grid-gap: 0.5em;
   padding: 1em;
   margin: auto;
   max-width: 1200px;
@@ -15,12 +14,13 @@
 
   @media (min-width: $mobileSize) {
     min-height: 500px;
+    grid-gap: 0.5em;
   }
 
   @media (min-width: $tabletSize) {
     min-height: 600px;
     max-width: 600px;
-    padding-block: 3em;
+    padding: 3em 0;
   }
 
   @media (min-width: $desktopSize) {
@@ -67,7 +67,6 @@
   height: 100%;
   grid-area: img5;
   display: none;
-  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     display: unset;
@@ -79,7 +78,6 @@
   height: 100%;
   grid-area: img6;
   display: none;
-  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     display: unset;
@@ -91,7 +89,6 @@
   height: 100%;
   grid-area: img7;
   display: none;
-  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     display: unset;
@@ -103,7 +100,6 @@
   height: 100%;
   grid-area: img8;
   display: none;
-  transition: all ease-in 0.5s;
 
   @media (min-width: $tabletSize) {
     display: unset;
@@ -119,28 +115,25 @@
   padding: 2em;
   grid-area: text;
   z-index: 10;
-  max-width: 250px;
-  transition: all ease-in 0.5s;
+  max-width: 650px;
 
   @media (min-width: $mobileSize) {
-    margin-block: -3em;
+    margin-top: -3em;
+    margin-bottom: -3em;
     padding: 3em;
-    max-width: 350px;
+    width: 80vw;
   }
 
   @media (min-width: $tabletSize) {
-    margin-block: -5em;
+    margin: -5em 0;
     padding: 4.5em;
-    padding-block: 5em;
-    max-width: 400px;
+    padding-top: 5em;
+    padding-bottom: 5em;
   }
 
   @media (min-width: $desktopSize) {
-    margin-inline: -5em;
-    padding-inline: 5em;
-    margin-block: -4em;
-    padding-block: 4em;
-    max-width: 650px;
+    margin: -4em -5em;
+    padding: 4em 5em;
   }
 
   h3 {
